--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ language: julia
 notifications:
   email: false
 julia:
-  - 1.0
+  - 1.6
+  - 1.7
+  - 1.8
   - 1.9
   - nightly
 os:
   - linux
 arch:
-  - x64
+  - amd64
 cache:
   directories:
     - ~/.julia/artifacts
