--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,9 @@ uuid = "6289278d-6ef3-4df6-b4f9-a9eee0b8a00d"
 authors = ["Mario Nicolò De Matteis"]
 version = "1.0.0-DEV"
 
+[deps]
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+
 [compat]
 julia = "1"
 
