--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,9 @@ authors = ["Mario Nicolò De Matteis"]
 version = "1.0.0-DEV"
 
 [deps]
+DifferentialEquations = "0c46a032-eb83-5123-abaf-570d42b7fbaa"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 
 [compat]
 julia = "1"
