--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,12 @@
 # Documentation: http://docs.travis-ci.com/user/languages/julia
 language: julia
 notifications:
-  email: false
+  email: true
 julia:
   - 1.6
   - 1.7
   - 1.8
   - 1.9
-  - nightly
 os:
   - linux
 arch:
